@@ -40,6 +40,7 @@ Enhancements:
 - #6938 Remove auto config message from the main window
 - #6941 Add Raspberry Pi Builds
 - #6949 Add a new option SYNERGY_AUTOCONFIG to exclude autoconfig from the standard version
+- #6952 Change OpenSSL logic to use find_package
 
 v1.13.0-stable
 ===========
